<resources>
    <string name="app_name">OnTracker</string>
    <string name="home">home</string>
    <string name="add_category">add_category</string>
    <string name="list_category">list_category</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="location">Item location</string>
    <string name="Description">Item Description</string>
    <string name="facebook_application_id" translatable="false">3005369646362240</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3005369646362240</string>
    <string name="ask_question_title">Have a Quesiton?</string>
    <string name="QAForum_header"><![CDATA[Q&A Forum]]></string>
    <string name="display_questions_header">All Questions</string>
    <string name="terms"> This Application is owned and operated by OnTracker. The use of this Application and the content and information available on this application (collectively the Services) shall be subject to acceptance of and compliance with the terms and conditions set forth in these terms of use (collectively, the Terms of Us) and elsewhere on this application. The terms you, your, yours, member members and yourself refer to all visitors/members to this application. Your agreement to comply with and be bound by these Terms of Use is deemed to occur upon your first use of the application. If you do not agree to these Terms of Use, you should not review information or obtain goods, services, or products from this application. The Sample Store has the total right to edit or delete any content in the Application, including this Agreement, without notifying you. USE OF THIS APPLICATION You agree not to:- (a) reproduce, copy, distribute, modify, publish, transmit, display, use, reuse, re-publicize, assign, sublicense, sell, or exploit for any public or commercial purpose, any portion of the application, use of the application, or access to the Application. (b) attempt to change, add to, remove, deface, hack or otherwise interfere with this Application or any material or content displayed on this Application; and/or ©️ access or use this Application in any way that could or is intended to damage or impair the Application, or any server or network underlying the Application, or interfere with anyone else\'s use and enjoyment of the Application. USE OF INFORMATION We have a group privacy policy which sets out how we handle personal data that you may provide or that we may collect, in connection with your access or use of this application. The policy is available on this application. You accept and agree to the terms set out in the policy and consent to the collection, use and disclosure of your personal data in accordance with the policy. SUBMISSIONS You may post reviews of products or services, comments, suggestions, or other messages (collectively referred to as “Submissions”) so long as the content of your Submission is not unlawful, threatening, abusive, spiteful, defamatory, invasive of privacy, obscene, profane, sexually explicit, fraudulent or otherwise objectionable or injurious to third parties (including, but not limited to, any content that encourages conduct that would constitute a criminal offense, give rise to civil liability, or otherwise violate applicable law). You may not use a false e-mail address, impersonate any person or entity, or otherwise mislead as to the origin of your Submission. The Sample Store reserves the right (but not the obligation) to monitor, edit and remove any Submission. By posting or sending us any Submission, you grant The Sample Store a non-exclusive, perpetual, irrevocable and fully sublicensable right to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such Submission in any media. PROMOTIONS From time to time, we may offer and/or co-sponsor contests and games on the Application. Each of these activities shall be governed by specific rules accessible from the Application. DISCLAIMER AND EXCLUSION OF LIABILITY 1. This Application, the Services, the information on this Application and use of all related facilities are provided on an as is, as available basis without any warranties whether express or implied. 2. To the fullest extent permitted by applicable law, we disclaim all representations and warranties relating to this Application and its contents, including in relation to any inaccuracies or omissions in this Application, warranties of merchantability, quality, fitness for a particular purpose, accuracy, availability, noninfringement or implied warranties from course of dealing or usage of trade. 3. We do not warrant that this Application will always be accessible, uninterrupted, timely, secure, error free or free from computer virus or other invasive or damaging code or that this Application will not be affected by any Acts of God or other force majeure events, including inability to obtain or shortage of necessary materials, equipment facilities, power or telecommunications, lack of telecommunications equipment or facilities and failure of information technology or telecommunications equipment or facilities. 4. While we may use reasonable efforts to include accurate and up-to-date information on this Application, we make no warranties or representations as to its accuracy, timeliness, or completeness. WE SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL OR PUNITIVE DAMAGES, HOWSOEVER CAUSED, RESULTING FROM YOUR ACCESS TO, USE OF OR INABILITY TO USE, RELIANCE ON OR DOWNLOADING FROM THE APPLICATION, OR ANY DELAYS, INACCURACIES IN THE INFORMATION OR IN ITS TRANSMISSION INCLUDING BUT NOT LIMITED TO DAMAGES FOR LOSS OF BUSINESS OR PROFITS, USE, DATA OR OTHER INTANGIBLE, EVEN IF WE HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. 5. The above exclusions and limitations apply only to the extent permitted by law. None of your statutory rights as a consumer that cannot be excluded or limited are affected. 6. Notwithstanding our efforts to ensure that our Application/system is secure, you acknowledge that all electronic data transfers are potentially susceptible to interception by others. We cannot, and do not, warrant that data transfers pursuant to this Application, or electronic mail transmitted to and from us, will not be monitored or read by others. 7. Although we use reasonable endeavours to ensure that any software made available on this Application is suitable for downloading, installation and use by you, all such software is provided as is without any warranty. Specifically, and without limitation, we do not warrant that any such software is virus free, without defects, compatible with other software or operating systems or suitable for any specific purpose. We accept no liability for any loss or damage caused by the downloading, installation or use of any such software, and the general exclusions and limitations above apply to such downloading, installation or use by you. LINKS TO THIS APPLICATION You may not create a link to any page of this Application without our prior written consent. If you do create a link to a page of this Application, you do so at your own risk and these Terms of Use will apply to your use of this Application by linking to it. THIRD PARTY ADVERTISEMENTS AND LINKS TO THIRD PARTY APPLICATIONS The Sample Store may display advertisements from third parties, such as banner advertisements and pop-up texts, and links to third party applications, on the Application. We are not responsible for the content of such advertisements or links, any products, services, or other materials relating to such advertisements, any linked application, or any link contained in a linked application. The display of any such advertisement or link does not imply endorsement by The Sample Store of the advertisement or linked application or any content therein. IN NO EVENT WILL THE SAMPLE STORE BE LIABLE, DIRECTLY OR INDIRECTLY, TO ANYONE FOR ANY DAMAGE OR LOSS ARISING FROM OR RELATING TO ANY USE, CONTINUED USE OR RELIANCE ON ANY THIRD PARTY ADVERTISEMENT DISPLAYED ON THE APPLICATION, ANY PRODUCTS, SERVICES OR OTHER MATERIALS RELATING TO ANY SUCH ADVERTISEMENT, ANY LINKED THIRD PARTY APPLICATION OR ANY LINK CONTAINED IN A LINKED APPLICATION. INTELLECTUAL PROPERTY RIGHTS All editorial content, information, photographs, illustrations, artwork and other graphic materials, and names, logos and trade marks on this Application are protected by copyright laws and/or other laws and/or international treaties, and belong to us and/or our suppliers, as the case may be. These works, logos, graphics, sounds or images may not be copied, reproduced, retransmitted, distributed, disseminated, sold, published, broadcasted or circulated whether in whole or in part, unless expressly permitted by us and/or our suppliers, as the case may be. Nothing contained on the Application should be construed as granting by implication, estoppel, or otherwise, any license or right to use any trademark displayed on the Application without our written permission. Misuse of any trademarks or any other content displayed on the Application is prohibited. We will not hesitate to take legal action against any unauthorised usage of its trade marks, name or symbols to preserve and protect its rights in the matter. All rights not expressly granted herein are reserved. Other product and company names mentioned herein may also be the trade marks of their respective owners. CHANGES TO TERMS OF USE These Terms of Use may be modified from time to time. Any modifications to these Terms of Use will be effective upon posting. You should therefore read these Terms of Use before you place any order. Your continued use of the Application after any modifications to the Terms of Use indicates your acceptance of the modified Terms of Use GOVERNING LAW AND JURISDICTION. This Application may be accessed from all countries around the world where the local technology permits. As each country has differing laws, by accessing this Application both we and you agree that the laws of the Republic of Singapore, without regard to the conflict of laws principles thereof, will apply to all matters relating to these Terms of Use. You accept and agree to submit to the exclusive jurisdiction of the courts of the Republic of Singapore in respect of any dispute or difference arising out of and/or in connection with these Terms of Use</string>
</resources>