<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:title="@string/add_category"
        android:icon="@drawable/ic_baseline_library_add_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list"
        android:title="@string/list_category"
        android:icon="@drawable/ic_baseline_list_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_box_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_login_24"
        app:showAsAction="always" />

</menu>